# POS_projekt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake
res/: config.ini
